--- a/index.html
+++ b/index.html
@@ -1,11 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ActiveBox</title>
+    <link rel="stylesheet" href="styles/Style.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <img src="assets/images/logo.png" alt="">
+            <ul>
+                <li><a href="#">FEATURES</a></li>
+                <li><a href="#">WORKS</a></li>
+                <li><a href="#">OUR TEAM</a></li>
+                <li><a href="#">TESTIMONIALS</a></li>
+                <li><a href="#">DOWNLOAD</a></li>
+            </ul>
+            <hr>
+            <h1>
+                YOUR FAVORITE ONE PAGE <br> MULTI PURPOSE TEMPLATE
+            </h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesent commodo cursus magna <br> vel
+                scelerisque nisl consectetur et.
+            </p>
+            <button>FIND OUR MORE</button>
+        </nav>
+    </header>
+
+    <section class="secc1">
+        <div>
+            <img src="assets/images/Layer 48.png" alt="">
+            <h2>EASILY CUSTOMISED</h2>
+            <p>
+                Cras justo odio. dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna
+                mollis ornare vel eu leo. Donec ullamcorper nulla
+            </p>
+        </div>
+        <div>
+            <img src="assets/images/Layer 44.png" alt="">
+            <h2>RESPONSIVE READY</h2>
+            <p>
+                Cras justo odio. dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna
+                mollis ornare vel eu leo. Donec ullamcorper nulla
+            </p>
+        </div>
+        <div>
+            <img src="assets/images/Layer 47.png" alt="">
+            <h2>MODERN DESIGN</h2>
+            <p>
+                Cras justo odio. dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna
+                mollis ornare vel eu leo. Donec ullamcorper nulla
+            </p>
+        </div>
+        <div>
+            <img src="assets/images/Layer 46.png" alt="">
+            <h2>CLEAN CODE</h2>
+            <p>
+                Cras justo odio. dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna
+                mollis ornare vel eu leo. Donec ullamcorper nulla
+            </p>
+        </div>
+        <div>
+            <img src="assets/images/Layer 43.png" alt="">
+            <h2>READY TO SHIP</h2>
+            <p>
+                Cras justo odio. dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna
+                mollis ornare vel eu leo. Donec ullamcorper nulla
+            </p>
+        </div>
+        <div>
+            <img src="assets/images/Layer 45.png" alt="">
+            <h2>DOWNLOAD FOR FREE</h2>
+            <p>
+                Cras justo odio. dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna
+                mollis ornare vel eu leo. Donec ullamcorper nulla
+            </p>
+        </div>
+    </section>
+
+    <section class="secc2">
+        <div class="images">
+            <img src="assets/images/1.jpeg" alt="">
+            <img src="assets/images/2.jpeg" alt="">
+            <img src="assets/images/3.jpeg" alt="">
+            <img src="assets/images/4.jpeg" alt="">
+            <img src="assets/images/5.jpeg" alt="">
+            <img src="assets/images/6.jpeg" alt="">
+            <img src="assets/images/7.jpeg" alt="">
+            <img src="assets/images/8.jpeg" alt="">
+        </div>
+    </section>
+
+    <section class="secc3">
+        <div class="tarjetas">
+            <img src="assets/images/Layer 30.png" alt="">
+            <h3>Ruth Woods</h3>
+            <p class="rojo">FOUNDER. CEO</p>
+            <P class="text3">
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum <br> nibh, ut fermentum massa
+                justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam
+                quis risus eget urna mollis ornare vel eu leo.
+            </P>
+            <div>
+                <img src="assets/images/Shape 6 2.png" alt="">
+                <img src="assets/images/Shape 3 2.png" alt="">
+                <img src="assets/images/Shape 11 2.png" alt="">
+            </div>
+        </div>
+
+        <div class="tarjetas">
+            <img src="assets/images/Layer 31.png" alt="">
+            <h3>Timothy Reed</h3>
+            <p class="rojo">CO-FOUNDER. DEVELOPER</p>
+            <P class="text3">
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa
+                justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam
+                quis risus eget urna mollis ornare vel eu leo.
+            </P>
+            <div>
+                <img src="assets/images/Shape 6 2.png" alt="">
+                <img src="assets/images/Shape 3 2.png" alt="">
+                <img src="assets/images/Shape 11 2.png" alt="">
+            </div>
+        </div>
+
+        <div class="tarjetas">
+            <img src="assets/images/Layer 32.png" alt="">
+            <h3>Victoria Valdez</h3>
+            <p class="rojo">UI DESIGNER</p>
+            <P class="text3">
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa
+                justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam
+                quis risus eget urna mollis ornare vel eu leo.
+            </P>
+            <div>
+                <img src="assets/images/Shape 6 2.png" alt="">
+                <img src="assets/images/Shape 3 2.png" alt="">
+                <img src="assets/images/Shape 11 2.png" alt="">
+            </div>
+        </div>
+
+        <div class="tarjetas">
+            <img src="assets/images/Layer 33.png" alt="">
+            <h3>Beverly Little</h3>
+            <p class="rojo">DATA SCIENTIST</p>
+            <P class="text3">
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa
+                justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam
+                quis risus eget urna mollis ornare vel eu leo.
+            </P>
+            <div>
+                <img src="assets/images/Shape 6 2.png" alt="">
+                <img src="assets/images/Shape 3 2.png" alt="">
+                <img src="assets/images/Shape 11 2.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="secc4">
+        <img src="assets/images/Layer 19.png" alt="Mujer en silla">
+
+        <div class="text-4">
+            <p class="text4">"Integer posuere erat a ante <br> venenatis dapibus posuere velit <br> aliquet. Donec sed
+                odio dui.
+                Aenean <br> eu leo quam..."</p>
+            <p class="persona">SUSAN SIMS, INTERACTION DESIGNER AT XYZ</p>
+            <div class="pagina">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+    </section>
+
+    <section class="secc5">
+        <h3>Are You Ready to Start? Download Now For Free!</h3>
+        <p>FUSCE DAPIBUS, TELLUS AC CURSUS COMMODO</p>
+        <button>DOWNLOAD HERE</button>
+    </section>
+
+    <section class="secc6">
+        <div class="location">
+            <h4>LOCATION</h4>
+            <p>3481 Melrose Place <br>
+                Beverly Hills, CA 90210</p>
+        </div>
+
+        <div class="share">
+            <h4>SHARE WITH LOVE</h4>
+            <div class="imagen">
+                <img src="assets/images/Shape 6 5.png" alt="">
+                <img src="assets/images/Shape 3 5.png" alt="">
+                <img src="assets/images/Shape 11 5.png" alt="">
+            </div>
+
+        </div>
+
+        <div class="about">
+            <h4>ABOUT ACTIVEBOX</h4>
+            <p>
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla
+                non metus auctor fringilla.
+            </p>
+        </div>
+    </section>
+
+    <footer>
+        <h4><Span class="gris">Copyright © 2015 ActiveBox All Rights Reserved <br>
+                Made with </Span> ❤ by Kamal Chaneman</h4>
+    </footer>
 </body>
+
 </html>
